Changelog for pdoTools.

2.12.3 pl
==============
- [#290] Improved running snippet via @FILE binding.
- [#296] Fix adding quotes to numeric values.
- [#297] Make cross context weblink url possible.

2.12.3 pl
==============
- Fixed E_NOTICE introduced in #285.

2.12.2 pl
==============
- Updated chunks for Bootstrap 4.

2.12.1 pl
==============
- [pdoMenu] Reverted back #283 and fixed docs for &tplCategoryFolder.
- [#284] [Fenom] Fixed properties of $_modx->context variable.
- [#275] [Fenom] Added "reset" and "end" modifiers.

2.12.0 pl
==============
- [Fenom] More security fixes from Sergey Shlokov.
- [#278] [pdoPage] Fixed caching.
- [pdoPage] Show internal log on &showLog=`1`.
- [#283] [pdoMenu] Fixed use of &tplCategoryFolder according to docs.
- [#281] [pdoTools] Fixed load of models from case sensitive paths.
- [#277] [pdoCrumbs] Ability to specify &customParents.
- [#265] [pdoFetch] Fixed return of "Array" on SQL errors.

2.11.3 pl
==============
- Added French lexicon entries.

2.11.2 pl
==============
- Fix detection of element names starting with a number.

2.11.1 pl
==============
- Faster processing of static files.

2.11.0 pl
==============
- [pdoFetch] Added "setTotal" option to enable calculating all rows ("SQL_CALC_FOUND_ROWS"), which will also result in the "totalVar" placeholder is being set.
- [pdoFetch] Option "setTotal" disabled by default.
- [pdoPage] Forces "setTotal" to provide pagination.

2.10.6 pl
==============
- Improved German lexicons.

2.10.5 pl
==============
- [pdoTools] Ability to return array from "prepareSnippet" for more performance.
- [FenomX] Fixed method "getStore".

2.10.4 pl
==============
- [Fenom] Do not output raw tags if there was a compile errors.
- [#266] [pdoMenu] Fixed the setting of "here" and "self" classes.
- [#261] [Fenom] Fixed unexpected behavior of the fenom tag "ignore".

2.10.3 pl
==============
- Improved compatibility with PHP 7.2
- [pdoFetch] Ability to use arrays in "&sortby".

2.10.2 pl